<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/project_background_color"
    android:orientation="horizontal"
    tools:context=".MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:theme="@style/AppTheme2">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/bar_app_name"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:id="@+id/lay_searchView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar"
            android:background="@color/project_background_color">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="7dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="30dp">

                <androidx.appcompat.widget.SearchView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    app:queryHint="@string/search_guide"
                    app:iconifiedByDefault="false"/>
<!--                android:id="@+id/searchView"-->

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.jgy.animal.slideviewpagers.ViewPagerCustomDuration
                    android:id="@+id/viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@color/project_main_color"
                    android:contentDescription="@string/top_banner_description">

                </com.jgy.animal.slideviewpagers.ViewPagerCustomDuration>

                <me.relex.circleindicator.CircleIndicator
                    android:id="@+id/indicator"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintLeft_toLeftOf="@+id/viewpager"
                    app:layout_constraintRight_toRightOf="@+id/viewpager"
                    app:layout_constraintBottom_toBottomOf="@+id/viewpager" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/main_guide"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:textColor="@color/project_text_color"
                    android:text="@string/home_guide_txt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical">


                    <ImageButton
                        android:id="@+id/imageCamp"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:background="@color/project_background_color"
                        app:srcCompat="@drawable/btn_pet_camp"
                        android:contentDescription="@string/ibtn_camp"/>
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/camp_txt"
                        android:textSize="16sp"
                        android:textColor="@color/project_text_color"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageTrip"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:background="@color/project_background_color"
                        app:srcCompat="@drawable/btn_pet_trip"
                        android:contentDescription="@string/ibtn_trip"/>

                    <TextView
                        android:id="@+id/txt_trip"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/trip_txt"
                        android:textSize="16sp"
                        android:textColor="@color/project_text_color"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageFood"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:background="@color/project_background_color"
                        app:srcCompat="@drawable/btn_pet_food"
                        android:contentDescription="@string/ibtn_food"/>

                    <TextView
                        android:id="@+id/txt_food"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/food_txt"
                        android:textSize="16sp"
                        android:textColor="@color/project_text_color"/>



                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageCult"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:background="@color/project_background_color"
                        app:srcCompat="@drawable/btn_pet_shop"
                        android:contentDescription="@string/ibtn_cult"/>

                    <TextView
                        android:id="@+id/txt_cult"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/cult_txt"
                        android:textSize="16sp"
                        android:textColor="@color/project_text_color"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageButy"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:background="@color/project_background_color"
                        app:srcCompat="@drawable/btn_pet_buty"
                        android:contentDescription="@string/ibtn_buty"/>

                    <TextView
                        android:id="@+id/txt_buty"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/buty_txt"
                        android:textSize="16sp"
                        android:textColor="@color/project_text_color"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageMedi"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:background="@color/project_background_color"
                        app:srcCompat="@drawable/btn_pet_medi"
                        android:contentDescription="@string/ibtn_medi"/>

                    <TextView
                        android:id="@+id/txt_medi"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/medi_txt"
                        android:textSize="16sp"
                        android:textColor="@color/project_text_color"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
