<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.jgy.animal.fragment.test.Testtest"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        tools:layout="@layout/fragment_test" />



    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/project_main_color"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/buttonHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_main_home"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:textStyle="bold" />



        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_main_search"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonBoard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="방명록"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:textStyle="bold"/>



        <Button
            android:id="@+id/buttonMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_main_map"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:textStyle="bold" />


        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_main_account"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:textStyle="bold"/>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>